<resources>
    <string name="app_name">SlotApp</string>
    <string name="first_text">一等</string>
    <string name="second_text">二等</string>
    <string name="third_text">三等</string>
    <string name="forth_text">四等</string>
    <string name="start_text">スタート</string>
    <string name="return_text">戻る</string>
    <string name="title_activity_data">dataActivity</string>
    <string name="history_text">履歴</string>
    <string name="edit_text">お名前とご住所を入力！</string>
    <string name="address">ご住所</string>
    <string name="name">お名前</string>
    <string name="save_text">保存</string>
    <string name="postal_text">郵便番号</string>
    <string name="service_text">データ保存開始</string>
    <string name="halt_service_text">データ保存終了</string>
    <string name="enter_text">クリア</string>
    <string name="number_text">本数</string>
    <string name="result_text">賞金</string>
</resources>
