<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RewardActicity"
    android:background="@color/backgroundColor"
    >

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_rwd_state"
        android:text="@string/start_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/digit5" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="56dp"
        android:background="@drawable/btn_rwd_state"
        android:text="@string/edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@id/digit6"
        app:layout_constraintRight_toLeftOf="@id/startBtn"
        app:layout_constraintTop_toTopOf="@id/startBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/returnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rwd_state"
        android:text="@string/return_text"
        app:layout_constraintBottom_toBottomOf="@id/startBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/startBtn"
        app:layout_constraintRight_toRightOf="@id/startBtn"
        app:layout_constraintTop_toTopOf="@id/startBtn"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/digit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/w0" />

    <ImageView
        android:id="@+id/digit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/w0"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="146dp"
        app:layout_constraintLeft_toRightOf="@id/digit1"
        app:layout_constraintTop_toTopOf="@id/digit1"/>

    <ImageView
        android:id="@+id/digit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/w0"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="146dp"
        app:layout_constraintLeft_toRightOf="@id/digit2"
        app:layout_constraintTop_toTopOf="@id/digit2"/>

    <ImageView
        android:id="@+id/comma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/digit3"
        app:layout_constraintLeft_toRightOf="@id/digit3"
        app:srcCompat="@drawable/wc" />

    <ImageView
        android:id="@+id/digit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/w0"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="146dp"
        app:layout_constraintLeft_toRightOf="@id/comma"
        app:layout_constraintTop_toTopOf="@id/digit3"/>

    <ImageView
        android:id="@+id/digit5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/w0"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="146dp"
        app:layout_constraintLeft_toRightOf="@id/digit4"
        app:layout_constraintTop_toTopOf="@id/digit4"/>

    <ImageView
        android:id="@+id/digit6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/digit5"
        app:layout_constraintTop_toTopOf="@id/digit5"
        app:srcCompat="@drawable/w0" />

    <TextView
        android:id="@+id/praiseTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="おめでとうございます！！　Congratulations!!"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"

        android:textColor="@color/backgroundThird"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>